overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-  overflow: hidden;
 }
 .navbar-brand {
   max-width: 252px;
